<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".grupos.GrupoA">

    <LinearLayout
        android:id="@+id/lnrCabecalhoA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:background="@drawable/side_nav_bar"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="2dp"
            android:layout_weight="5"
            android:text="@string/lblEquipeA"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lblPontos"
            android:textAlignment="viewEnd"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lblJogos"
            android:textAlignment="viewEnd"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lblVitoria"
            android:textAlignment="viewEnd"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lblEmpate"
            android:textAlignment="viewEnd"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lblDerrotas"
            android:textAlignment="viewEnd"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lblSaldoGols"
            android:textAlignment="viewEnd"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lblGolsPro"
            android:textAlignment="viewEnd"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lblGolsContra"
            android:textAlignment="viewEnd"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lblCAmarelo"
            android:textAlignment="viewEnd"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lblCVermelho"
            android:textAlignment="viewEnd"
            android:textColor="@color/black" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvGruposA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lnrCabecalhoA"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="3dp"
        android:background="@drawable/side_nav_bar"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rcvGruposA">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="2dp"
                android:layout_weight="5"
                android:text="@string/lblDescP"
                android:textColor="@color/black"
                android:textSize="10sp"
                android:textStyle="italic" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="2dp"
                android:layout_weight="5"
                android:text="@string/lblDescJ"
                android:textColor="@color/black"
                android:textSize="10sp"
                android:textStyle="italic" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="2dp"
                android:layout_weight="5"
                android:text="@string/lblDescV"
                android:textColor="@color/black"
                android:textSize="10sp"
                android:textStyle="italic" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="2dp"
                android:layout_weight="5"
                android:text="@string/lblDescE"
                android:textColor="@color/black"
                android:textSize="10sp"
                android:textStyle="italic" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="2dp"
                android:layout_weight="5"
                android:text="@string/lblDescD"
                android:textColor="@color/black"
                android:textSize="10sp"
                android:textStyle="italic" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="2dp"
                android:layout_weight="5"
                android:text="@string/lblDescSG"
                android:textColor="@color/black"
                android:textSize="10sp"
                android:textStyle="italic" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="2dp"
                android:layout_weight="5"
                android:text="@string/lblDescGP"
                android:textColor="@color/black"
                android:textSize="10sp"
                android:textStyle="italic" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="2dp"
                android:layout_weight="5"
                android:text="@string/lblDescGC"
                android:textColor="@color/black"
                android:textSize="10sp"
                android:textStyle="italic" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="2dp"
                android:layout_weight="5"
                android:text="@string/lblDescCA"
                android:textColor="@color/black"
                android:textSize="10sp"
                android:textStyle="italic" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="2dp"
                android:layout_weight="5"
                android:text="@string/lblDescCV"
                android:textColor="@color/black"
                android:textSize="10sp"
                android:textStyle="italic" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>